--- a/src/components/sidebard-filter/sidebar-filter.scss
+++ b/src/components/sidebard-filter/sidebar-filter.scss
@@ -1,6 +1,85 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 .sidebar-filter-container {
     display: flex;
+    flex-direction: column;
+    text-align: left;
     width: 222px;
     height: 985px;
     background: #F9F9F9;
+    
+    .filters {
+        padding: 15px 20px;
+
+        .filter-title {
+            font-size: 14px;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        .categories-filter {
+            .category {
+                padding-left: 10px;
+                font-size: 16px;
+                font-family: 'Roboto', sans-serif;
+                color: #AAAAAA;
+            }
+        }
+
+        .sex-filter {
+            .sex-checkboxes {
+                display: flex;
+                align-items: center;
+
+                input {
+                    margin: 0;
+                }
+
+                label {
+                    margin: 0 10px 0 5px;
+                    font-size: 14px;
+                    font-family: 'Roboto', sans-serif;
+                    color: #171717;
+                }
+            }
+        }
+
+        .size-filter {
+            .sizes {
+                display: flex;
+                flex-flow: row wrap;
+                .size {
+                    display: flex;
+                    width: 35px;
+                    height: 24px;
+                    background: #c4c4c4;
+                    margin-right: 12px;
+                    margin-bottom: 10px;
+                }
+
+                :nth-child(4),:nth-child(8) {
+                    margin-right: 0;
+                }
+            }
+        }
+
+        .color-filter {
+            .colors {
+                display: flex;
+                flex-flow: row wrap;
+                .color {
+                    display: flex;
+                    width: 26px;
+                    height: 26px;
+                    background: #c4c4c4;
+                    border-radius: 5px;
+                    margin-right: 12px;
+                    margin-bottom: 10px;
+                }
+
+                :nth-child(5),:nth-child(10) {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
 }
