--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -33,6 +33,8 @@
             height: 45px;
             background: #171717;
             color: white;
+            border: none;
+            outline: none;
         }
 
         .shopping-cart-icon {
