--- a/src/components/sidebard-filter/sidebar-filter.scss
+++ b/src/components/sidebard-filter/sidebar-filter.scss
@@ -12,16 +12,23 @@
         padding: 15px 20px;
 
         .filter-title {
+            padding-top: 25px;
             font-size: 14px;
             font-family: 'Roboto', sans-serif;
         }
 
         .categories-filter {
+            .filter-title {
+                padding-top: 0px;
+            }
+
             .category {
+                margin: 10px 0;
                 padding-left: 10px;
                 font-size: 16px;
                 font-family: 'Roboto', sans-serif;
                 color: #AAAAAA;
+                cursor: pointer;
             }
         }
 
@@ -32,6 +39,7 @@
 
                 input {
                     margin: 0;
+                    cursor: pointer;
                 }
 
                 label {
@@ -54,6 +62,7 @@
                     background: #c4c4c4;
                     margin-right: 12px;
                     margin-bottom: 10px;
+                    cursor: pointer;
                 }
 
                 :nth-child(4),:nth-child(8) {
@@ -74,6 +83,7 @@
                     border-radius: 5px;
                     margin-right: 12px;
                     margin-bottom: 10px;
+                    cursor: pointer;
                 }
 
                 :nth-child(5),:nth-child(10) {
