--- a/src/components/admin-sidebar-navigation/admin-sidebar-navigation.scss
+++ b/src/components/admin-sidebar-navigation/admin-sidebar-navigation.scss
@@ -17,6 +17,7 @@
         width: 175px;
         margin-left: 23px;
         margin-bottom: 33px;
+        cursor: pointer;
 
         .navigation-icon {
             width: 22px;
@@ -27,7 +28,7 @@
         .navigation-title {
             margin: 0;
             padding-left: 25px;
-            font-size: 24px;
+            font-size: 18px;
             font-family: 'Roboto', sans-serif;
         }
     }
