--- a/src/pages/admin-panel/admin-panel.scss
+++ b/src/pages/admin-panel/admin-panel.scss
@@ -1,5 +1,6 @@
 .admin-panel-container {
     display: flex;
+    justify-content: space-between;
 
     .admin-panel-content {
         width: 1065px;
