--- a/src/components/admin-products/admin-products.scss
+++ b/src/components/admin-products/admin-products.scss
@@ -11,25 +11,30 @@
             background: #aaaaaa;
         }
 
-        .add-product-button {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 180px;
-            height: 40px;
-            padding: 0 15px;
-            border: none;
-            font-size: 14px;
-            font-family: 'Roboto', sans-serif;
-            background: #171717;
-            color: white;
+        .add-product-link {
             outline: none;
-            cursor: pointer;
+            text-decoration: none;
 
-            .add-product-icon {
-                width: 25px;
-                height: 25px;
-                margin-right: 15px;
+            .add-product-button {
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                width: 180px;
+                height: 40px;
+                padding: 0 15px;
+                border: none;
+                font-size: 14px;
+                font-family: 'Roboto', sans-serif;
+                background: #171717;
+                color: white;
+                outline: none;
+                cursor: pointer;
+    
+                .add-product-icon {
+                    width: 25px;
+                    height: 25px;
+                    margin-right: 15px;
+                }
             }
         }
     }
@@ -39,9 +44,15 @@
         flex-flow: row wrap;
         justify-content: space-between;
         margin-top: 15px;
-        
-        .product-card-container {
-            margin-bottom: 30px;
+        .product-link {
+            text-decoration: none;
+            outline: none;
+            color: #171717;
+
+            .product-card-container {
+                margin-bottom: 30px;
+            }
         }
+        
     }
 }
