--- a/src/components/add-product/add-product.scss
+++ b/src/components/add-product/add-product.scss
@@ -19,9 +19,18 @@
         }
 
         .product-photos-upload {
-            width: 356px;
-            height: 343px;
+            width: 430px;
+            height: 386px;
             background: #F0F0F0;
+
+            .fileContainer {
+                padding: 0;
+                margin: 0;
+                
+                .uploadPictureContainer {
+                    width: 18% !important;
+                }
+            }
         }
     }
     
