--- a/src/components/edit-product/edit-product.scss
+++ b/src/components/edit-product/edit-product.scss
@@ -19,9 +19,20 @@
         }
 
         .product-photos-upload {
-            width: 356px;
-            height: 343px;
-            background: #F0F0F0;
+            width: 430px;
+            height: 386px;
+
+            .fileContainer {
+                width: 430px;
+                height: 386px;
+                padding: 0;
+                margin: 0;
+                background: #F0F0F0;
+                
+                .uploadPictureContainer {
+                    width: 18% !important;
+                }
+            }
         }
     }
     
