--- a/src/components/sidebard-filter/sidebar-filter.scss
+++ b/src/components/sidebard-filter/sidebar-filter.scss
@@ -30,6 +30,10 @@
                 color: #AAAAAA;
                 cursor: pointer;
             }
+
+            .selected-category {
+                color: #171717;
+            }
         }
 
         .sex-filter {
@@ -69,6 +73,10 @@
                     cursor: pointer;
                 }
 
+                .selected-size {
+                    border: 1px solid #171717 !important;
+                }
+
                 :nth-child(4),:nth-child(8) {
                     margin-right: 0;
                 }
@@ -81,8 +89,9 @@
                 flex-flow: row wrap;
                 .color {
                     display: flex;
-                    width: 26px;
-                    height: 26px;
+                    width: 22px;
+                    height: 22px;
+                    border: 2px solid transparent;
                     background: #c4c4c4;
                     border-radius: 5px;
                     margin-right: 12px;
@@ -93,6 +102,10 @@
                 :nth-child(5),:nth-child(10) {
                     margin-right: 0;
                 }
+            }
+
+            .selected-color {
+                border: 2px solid #ff9474 !important;
             }
         }
     }
