--- a/src/pages/login-page/login-page.scss
+++ b/src/pages/login-page/login-page.scss
@@ -1,3 +1,53 @@
 .login-page-container {
-    
+    .login-form-container {
+        display: flex;
+        flex-direction: column;
+        width: 740;
+        height: 782;
+        background: white;
+
+        .login-form-header {
+            margin: 0 89px;
+            text-align: center;
+
+            .logo-text {
+                font-size: 32px;
+                font-weight: bold;
+                margin: 0;
+                padding-left: 20px;
+                padding-bottom: 10px;
+            }
+        }
+
+        .login-form {
+            display: flex;
+            flex-direction: column;
+
+            .login-input {
+                width: 563px;
+                margin-bottom: 10px;
+            }
+        }
+
+        .login-action-buttons {
+            display: flex;
+            flex-direction: column;
+
+            .login-button {
+                .login-icon {
+                    width: 27px;
+                    height: 27px;
+                }
+            }
+        }
+
+        .login-partnership {
+            display: flex;
+
+            .login-partnership-text {
+                color: #9D9D9D;
+                font-size: 19px;
+            }
+        }
+    }
 }
