register page ui

--- a/src/components/sidebard-filter/sidebar-filter.scss
+++ b/src/components/sidebard-filter/sidebar-filter.scss
@@ -75,6 +75,7 @@
 
                 .selected-size {
                     border: 1px solid #171717 !important;
+                    color: #171717;
                 }
 
                 :nth-child(4),:nth-child(8) {
