--- a/src/pages/register-page/register-page.scss
+++ b/src/pages/register-page/register-page.scss
@@ -1,63 +1,52 @@
-.login-page-container {
+.register-page-container {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto auto;
 
-    .login-form-container {
+    .register-form-container {
         display: flex;
         flex-direction: column;
         width: 740px;
         height: 736px;
         background: white;
 
-        .login-form-header {
+        .register-form-header {
             display: flex;
             flex-direction: column;
-            margin: 0 89px 110px 89px;
+            margin: 0 89px 50px 89px;
             text-align: center;
 
             .logo-text {
                 font-size: 41px;
                 font-weight: bold;
-                margin: 0 0 50px 0;
+                margin: 0 0 20px 0;
             }
 
-            .login-welcome-text {
-                font-size: 18px;
+            .register-text {
+                font-size: 21px;
                 color: #9e9e9e;
                 margin: 0;
             }
         }
 
-        .login-form {
+        .register-form {
             display: flex;
             flex-direction: column;
             margin: 0 89px 25px 89px;
 
-            .login-input {
+            .register-input {
                 width: 563px;
                 margin-bottom: 25px;
             }
-
-            a {
-                text-decoration: none;
-                outline: none;
-            }
-
-            .forgot-password-text {
-                text-align: right;
-                font-size: 16px;
-                color: #9e9e9e;
-            }
         }
 
-        .login-action-buttons {
+        .register-action-buttons {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             margin: 0 89px 140px 89px;
 
-            .login-button {
+            .register-button {
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -68,26 +57,10 @@
                 color: white;
                 font-size: 18px;
                 cursor: pointer;
-
-                .login-icon {
-                    width: 22px;
-                    height: 22px;
-                    margin-right: 5px;
-                }
-            }
-
-            .register-button {
-                width: 254px;
-                height: 48px;
-                border: none;
-                background: #AAAAAA;
-                color: white;
-                font-size: 18px;
-                cursor: pointer;
             }
         }
 
-        .login-partnership {
+        .register-partnership {
             display: flex;
             justify-content: center;
             margin: 0 89px;
@@ -97,7 +70,7 @@
                 text-decoration-color: #9d9d9d;
             }
 
-            .login-partnership-text {
+            .register-partnership-text {
                 color: #9D9D9D;
                 font-size: 18px;
                 padding-left: 10px;
