types update, product-details to function component

--- a/src/pages/product-details/product-details.scss
+++ b/src/pages/product-details/product-details.scss
@@ -75,7 +75,7 @@
             }
         }
 
-        .product-old-price {
+        .product-price {
             font-size: 36px;
             font-family: 'Roboto', sans-serif;
             font-weight: medium;
@@ -84,7 +84,7 @@
             margin-bottom: 0px;
         }
 
-        .product-price {
+        .product-sale-price {
             font-size: 36px;
             font-family: 'Roboto', sans-serif;
             font-weight: medium;
