--- a/src/pages/product-details/product-details.scss
+++ b/src/pages/product-details/product-details.scss
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-
 .product-details-container {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     text-align: left;
+
+    .product-info-container {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 25px;
+    }
 
     .product-info {
         display: flex;
